Add link to configure review topic settings

--- a/assets/javascripts/discourse/templates/yearly-review-setting.hbs
+++ b/assets/javascripts/discourse/templates/yearly-review-setting.hbs
@@ -1,8 +1,7 @@
 <div class="pull-left">
   <div class="form-horizontal settings">
-    <div class="create-review">
-      {{create-review}}
-    </div>
+    <div>{{create-review}}</div>
+    <div class="configure-review-settings">{{configure-review}}</div>
   </div>
 </div>
 
