--- a/assets/javascripts/discourse/templates/components/create-review.hbs
+++ b/assets/javascripts/discourse/templates/components/create-review.hbs
@@ -1,3 +1,3 @@
 <label>
-  <button class="btn btn-icon-text btn-primary create" {{action 'submit'}}>Create the Review</button>
+  <button class="btn btn-icon-text btn-primary create" {{action 'submit'}}>{{I18n 'yearly_review.create_review_topic'}}</button>
 </label>
