--- a/app/views/yearly-review/yearly_review.html.erb
+++ b/app/views/yearly-review/yearly_review.html.erb
@@ -1,36 +1,18 @@
 <% if @user_stats.any? %>
-  <div data-review-topic="true">
+  <div data-review-users="true">
     <% @user_stats.each do |obj| %>
       <% if obj[:users] %>
         <h3><%= t("yearly_review.title.#{obj[:key]}") %></h3>
-        <table>
-          <tr>
-            <th>
-              <%= t('yearly_review.user') %>
-            </th>
-            <th>
-              <%= t("yearly_review.action.#{obj[:key]}") %>
-            </th>
-          </tr>
-          <% obj[:users].each do |user| %>
-            <tr>
-              <td>
-                <%= raw(avatar_image(user.username, user.uploaded_avatar_id)) %>
-                <%= raw(user_link(user.username)) %>
-              </td>
-              <td>
-                <%= user.action_count %>
-              </td>
-            </tr>
-          <% end %>
-        </table>
+        <% obj[:users].each do |user| %>
+          <span><%= raw(avatar_image(user.username, user.uploaded_avatar_id)) %><%= raw(user_link(user.username)) %></span>
+        <% end %>
       <% end %>
     <% end %>
   </div>
 <% end %>
 
 <% if @featured_badge_users.any? %>
-  <div data-review-badges="true">
+  <div data-review-users="true">
     <h3><%= t("yearly_review.featured_badge.title", badge_name: SiteSetting.yearly_review_featured_badge) %></h3>
     <% @featured_badge_users.each do |user| %>
       <span><%= raw(avatar_image(user.username, user.uploaded_avatar_id)) %><%= raw(user_link(user.username)) %></span>
