--- a/assets/stylesheets/yearly_review.scss
+++ b/assets/stylesheets/yearly_review.scss
@@ -2,21 +2,30 @@
 [data-review-featured-topics="true"] table {
   width: 100%;
 }
-[data-review-topic-users="true"] table th {
+
+[data-review-topic-users="true"] table th,
+[data-review-featured-topics="true"] table th {
   text-align: left;
+}
+
+[data-review-topic-users="true"] table th {
   width: 50%;
 }
+
 [data-review-users="true"] span {
   white-space: pre;
   display: inline-block;
   margin-bottom: 4px;
 }
-[data-review-featured-topics="true"] table td:first-child {
+
+[data-review-featured-topics="true"] table th:first-child {
   width: 10%;
 }
-[data-review-featured-topics="true"] table td:nth-child(2) {
+
+[data-review-featured-topics="true"] table th:nth-child(2) {
   width: 60%;
 }
-[data-review-featured-topics="true"] table td:last-child {
+
+[data-review-featured-topics="true"] table th:last-child {
   width: 30%;
 }
