--- a/app/views/yearly-review/yearly_review.html.erb
+++ b/app/views/yearly-review/yearly_review.html.erb
@@ -40,8 +40,8 @@
       </tr>
       <% @daily_visits.each do |visit| %>
       <tr>
-        <td><%= number_to_human(visit.days, units: {thousand: 'K' }) %></td>
-        <td><%= number_to_human(visit.users, units: {thousand: 'K'}) %></td>
+        <td><%= format_number(visit.days) %></td>
+        <td><%= format_number(visit.users) %></td>
       </tr>
       <% end %>
     </table>
@@ -56,7 +56,7 @@
     <% end %>
     <% if @featured_badge_users[0].more_users > 0 %>
       <% @badge = @featured_badge_users[0] %>
-      <div><%= raw(badge_link(@badge.name, @badge.id, @badge.more_users)) %></div>
+      <div><%= raw(badge_link(@badge.name, @badge.id, format_number(@badge.more_users))) %></div>
     <% end %>
   </div>
 <% end %>
