Use format_number for more badges link text

--- a/app/views/yearly-review/yearly_review.html.erb
+++ b/app/views/yearly-review/yearly_review.html.erb
@@ -20,7 +20,7 @@
                 <%= raw(user_link(user.username)) %>
               </td>
               <td>
-                <%= number_to_human(user.action_count < 1 ? 1 : user.action_count.round, units: {thousand: 'K'}) %>
+                <%= format_number(user.action_count < 1 ? 1 : user.action_count.round) %>
               </td>
             </tr>
           <% end %>
