--- a/app/views/yearly-review/yearly_review.html.erb
+++ b/app/views/yearly-review/yearly_review.html.erb
@@ -25,6 +25,9 @@
             </tr>
           <% end %>
         </table>
+        <% if obj[:key] == 'visits' %>
+          <%= raw(user_visits_link) %>
+        <% end %>
       <% end %>
     <% end %>
   </div>
@@ -32,11 +35,11 @@
 
 <% if @daily_visits.any? %>
   <div data-review-topic-users="true">
-    <h2>Daily Visits</h2>
+    <h2><%= t("yearly_review.title.daily_visits") %></h2>
     <table>
       <tr>
-        <th>Days</th>
-        <th>Visits</th>
+        <th><%= t("yearly_review.days_visited") %></th>
+        <th><%= t("yearly_review.users") %></th>
       </tr>
       <% @daily_visits.each do |visit| %>
       <tr>
