--- a/assets/stylesheets/yearly_review.scss
+++ b/assets/stylesheets/yearly_review.scss
@@ -12,6 +12,23 @@
   width: 50%;
 }
 
+[data-review-topic-users="true"] table table tr {
+  border-top: none;
+  border-bottom: none;
+}
+
+[data-review-topic-users="true"] table table tbody {
+  border-top: none;
+}
+
+[data-review-topic-users="true"] table table td {
+  text-align: left;
+}
+
+[data-review-topic-users="true"] table table td:first-child {
+  width: 25px;
+}
+
 [data-review-users="true"] span {
   white-space: pre;
   display: inline-block;
