Remove left padding from inner table

--- a/assets/stylesheets/yearly_review.scss
+++ b/assets/stylesheets/yearly_review.scss
@@ -23,6 +23,7 @@
 
 [data-review-topic-users="true"] table table td {
   text-align: left;
+  padding-left: 0;
 }
 
 [data-review-topic-users="true"] table table td:first-child {
