--- a/app/views/yearly-review/_yearly_review_category.html.erb
+++ b/app/views/yearly-review/_yearly_review_category.html.erb
@@ -1,20 +1,14 @@
 <div data-review-featured-topics="true">
-  <h2><%= raw(category_link(@category_topics[:category_name])) %></h2>
+
+## <%= raw(category_link(@category_topics[:category_name])) %></h2>
   <% @category_topics[:topics].each do |key, val| %>
-  <h3><%= t("yearly_review.rank_type.title.#{key}") %></h3>
-  <table>
-    <tr>
-      <th><%= t('yearly_review.user') %></th>
-      <th><%= t('yearly_review.topic') %></th>
-      <th><%= t("yearly_review.rank_type.action_types.#{key}") %></th>
-    </tr>
+### <%= t("yearly_review.rank_type.title.#{key}") %></h3>
+
+|<%= t('yearly_review.user') %>|<%= t('yearly_review.topic') %>|<%= t("yearly_review.rank_type.action_types.#{key}") %>|
+|---|---|---:|
     <% val.each do |topic| %>
-    <tr class="topic-<%= topic.id %>">
-      <td><%= raw(avatar_image(topic.username, topic.uploaded_avatar_id)) %></td>
-      <td><%= raw(topic_link(topic.title, topic.topic_slug, topic.id)) %></td>
-      <td><%= format_number(topic.action_count.round) %></td>
-    </tr>
-  <% end %>
-  </table>
+|<%= raw(avatar_image(topic.username, topic.uploaded_avatar_id)) %>|<%= raw(topic_link(topic.title, topic.topic_slug, topic.id)) %>|<%= format_number(topic.action_count.round) %>|
+    <% end %>
+
   <% end %>
 </div>
