--- a/app/views/yearly-review/_yearly_review.html.erb
+++ b/app/views/yearly-review/_yearly_review.html.erb
@@ -1,34 +1,21 @@
 <% if @user_stats.any? %>
   <div data-review-topic-users="true">
-    <h2><%= t('yearly_review.title.users_section', year: @review_year) %></h2>
+
+## <%= t('yearly_review.title.users_section', year: @review_year) %>
     <% @user_stats.each do |obj| %>
       <% if obj[:users] %>
-        <h2><%= t("yearly_review.title.#{obj[:key]}") %></h2>
-        <table class="<%= class_from_key(obj[:key]) %>">
-          <tr>
-            <th>
-              <%= t('yearly_review.user') %>
-            </th>
-            <th>
-              <%= t("yearly_review.action.#{obj[:key]}") %>
-            </th>
-          </tr>
+## <%= t("yearly_review.title.#{obj[:key]}") %>
+
+<div class="<%= class_from_key(obj[:key]) %>">
+
+|<%= t('yearly_review.user') %>|<%= t("yearly_review.action.#{obj[:key]}") %>|
+|---|---|
           <% obj[:users].each_with_index do |user, i| %>
-            <tr class="user-row-<%= i %>">
-              <td>
-                <table>
-                  <tr>
-                    <td><%= raw(avatar_image(user.username, user.uploaded_avatar_id)) %></td>
-                    <td><%= raw(user_link(user.username)) %></td>
-                  </tr>
-                </table>
-              </td>
-              <td>
-                <%= format_number(user.action_count < 1 ? 1 : user.action_count.round) %>
-              </td>
-            </tr>
+|<%= raw(avatar_image(user.username, user.uploaded_avatar_id)) %> <%= raw(user_link(user.username)) %>|<%= format_number(user.action_count < 1 ? 1 : user.action_count.round) %>|
           <% end %>
-        </table>
+
+</div>
+
         <% if obj[:key] == 'visits' %>
           <%= raw(user_visits_link) %>
         <% end %>
@@ -39,25 +26,23 @@
 
 <% if @daily_visits.any? %>
   <div data-review-topic-users="true">
-    <h2><%= t("yearly_review.title.daily_visits") %></h2>
-    <table>
-      <tr>
-        <th><%= t("yearly_review.days_visited") %></th>
-        <th><%= t("yearly_review.users") %></th>
-      </tr>
+
+## <%= t("yearly_review.title.daily_visits") %>
+
+|<%= t("yearly_review.days_visited") %>|<%= t("yearly_review.users") %>|
+|---|---|
       <% @daily_visits.each do |visit| %>
-      <tr>
-        <td><%= format_number(visit.days) %></td>
-        <td><%= format_number(visit.users) %></td>
-      </tr>
+|<%= table_row(format_number(visit.days), format_number(visit.users)) %>|
       <% end %>
-    </table>
+
   </div>
 <% end %>
 
 <% if @featured_badge_users.any? %>
   <div data-review-users="true">
-    <h2><%= t("yearly_review.title.featured_badge", badge_name: SiteSetting.yearly_review_featured_badge) %></h2>
+
+## <%= t("yearly_review.title.featured_badge", badge_name: SiteSetting.yearly_review_featured_badge) %>
+
     <% @featured_badge_users.each do |user| %>
       <span><%= raw(user_link(user.username)) %></span>
     <% end %>
@@ -65,5 +50,6 @@
       <% @badge = @featured_badge_users[0] %>
       <div><%= raw(badge_link(@badge.name, @badge.id, format_number(@badge.more_users))) %></div>
     <% end %>
+
   </div>
 <% end %>
