--- a/app/views/yearly-review/_yearly_review_category.html.erb
+++ b/app/views/yearly-review/_yearly_review_category.html.erb
@@ -4,7 +4,7 @@
   <% @category_topics[:topics].each do |key, val| %>
 ### <%= t("yearly_review.rank_type.title.#{key}") %>
 
-<%= table_header('yearly_review.user', 'yearly_review.topic', "yearly_review.rank_type.action_types.#{key}") %>
+<%= table_header('user', 'topic', "rank_type.action_types.#{key}") %>
 |---|---|---|
     <% val.each do |topic| %>
 <%= table_row(avatar_image(topic.username, topic.uploaded_avatar_id), topic_link(topic.title, topic.topic_slug, topic.id), format_number(topic.action_count.round)) %>
